# frontmatter-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  release-please-config.json
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
docs/: SETUP.md
docs/adr/: 0002-use-fastmcp-framework.md  0003-use-duckdb-for-sql-queries.md  0004-use-pyarrow-for-data-passing.md  0005-pass-all-values-as-strings-to-duckdb.md  0006-json-encode-arrays.md  0007-use-relative-paths-from-base-directory.md  0011-decouple-semantic-search-as-optional-package.md
docs/workspace/feat/semantic-search/: NOTES_20251205_133000.md  NOTES_20251205_134600.md  NOTES_20251205_140000.md  NOTES_20251205_140821.md  NOTES_20251205_141500.md  NOTES_20251205_153835.md  NOTES_20251205_155524.md  NOTES_20251205_163136.md  NOTES_20251205_171050.md  NOTES_20251205_174731.md  NOTES_20251205_175122.md  NOTES_20251205_181431.md  NOTES_20251205_184500.md  PLAN.md  (+6 more)
src/filesystem_frontmatter_mcp/: parser.py  query.py  server.py
src/frontmatter_mcp/: cache.py  context.py  embedding.py  files.py  indexer.py  query.py  query_schema.py  schema.py  server.py  settings.py
src/frontmatter_mcp/semantic/: __init__.py  cache.py  context.py  indexer.py  model.py  query.py  query_schema.py
tests/: __init__.py  test_cache.py  test_embedding.py  test_frontmatter.py  test_indexer.py  test_query.py  test_query_schema.py  test_schema.py  test_server.py
tests/benchmarks/: conftest.py  test_query.py  test_query_semantic.py
tests/semantic/: test_cache.py  test_indexer.py  test_model.py
